たくさんのview作った

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.xjapan.karaoke2.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_want_music"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="歌いたい曲を登録"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_sang_music"
+        android:orderInCategory="100"
+        android:title="歌った曲を登録"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_logout"
+        android:orderInCategory="100"
+        android:title="退室"
         app:showAsAction="never" />
 </menu>
