--- a/app/src/main/res/layout/content_search_sang_music.xml
+++ b/app/src/main/res/layout/content_search_sang_music.xml
@@ -9,13 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.xjapan.karaoke2.SuggestionActivity"
-    tools:showIn="@layout/activity_suggestion">
-
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/suggetionMusicListView"
-        android:layout_alignParentTop="true" />
+    tools:context="com.example.xjapan.karaoke2.SearchSangMusicActivity"
+    tools:showIn="@layout/activity_search_sang_music">
 
 </RelativeLayout>
