--- a/app/src/main/res/layout/content_search_sang_music.xml
+++ b/app/src/main/res/layout/content_search_sang_music.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -12,4 +13,56 @@
     tools:context="com.example.xjapan.karaoke2.SearchSangMusicActivity"
     tools:showIn="@layout/activity_search_sang_music">
 
-</RelativeLayout>
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/textInputLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:id="@+id/artistEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="アーティスト名"
+            android:inputType="text" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <Button
+        android:id="@+id/searchArtistButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/textInputLayout"
+        android:layout_centerInParent="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:paddingLeft="@dimen/search_button_margin"
+        android:paddingRight="@dimen/search_button_margin"
+        android:text="検索" />
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/textInputLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:id="@+id/musicEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="曲名"
+            android:inputType="text" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <Button
+        android:id="@+id/searchMusicButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/textInputLayout"
+        android:layout_centerInParent="true"
+        android:paddingLeft="@dimen/search_button_margin"
+        android:paddingRight="@dimen/search_button_margin"
+        android:text="検索" />
+
+</LinearLayout>
