--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,7 +19,7 @@
         android:text="Hello World!" />
 
     <Button
-        android:id="@+id/button_matui"
+        android:id="@+id/button_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/button_matui"
+        android:layout_below="@+id/button_register"
         android:layout_marginTop="57dp"
         android:text="よっぴのボタン" />
 
