--- a/app/src/main/res/layout/activity_initial_use.xml
+++ b/app/src/main/res/layout/activity_initial_use.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.xjapan.karaoke2.RegisterActivity">
+    tools:context="com.example.xjapan.karaoke2.InitialUseActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,7 +21,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_register" />
-
+    <include layout="@layout/content_initial_use" />
 
 </android.support.design.widget.CoordinatorLayout>
