--- a/app/src/main/res/layout/content_initial_use.xml
+++ b/app/src/main/res/layout/content_initial_use.xml
@@ -10,39 +10,32 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.xjapan.karaoke2.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context="com.example.xjapan.karaoke2.InitialUseActivity"
+    tools:showIn="@layout/activity_initial_use">
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayout"
+        android:id="@+id/textInputLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <EditText
-            android:id="@+id/roomNameEditText"
+            android:id="@+id/userNameEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="ルーム名を入力"
+            android:hint="ユーザ名"
             android:inputType="text" />
 
     </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:id="@+id/roomCreateButton"
+        android:id="@+id/userRegisterButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/textInputLayout"
         android:layout_centerInParent="true"
         android:paddingLeft="@dimen/search_button_margin"
         android:paddingRight="@dimen/search_button_margin"
-        android:text="ルーム作成" />
-
-    <Button
-        android:id="@+id/roomInButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:paddingLeft="@dimen/search_button_margin"
-        android:paddingRight="@dimen/search_button_margin"
-        android:text="ルーム入室" />
+        android:text="登録" />
 
 </LinearLayout>
