--- a/app/src/main/res/layout/content_register.xml
+++ b/app/src/main/res/layout/content_register.xml
@@ -12,4 +12,18 @@
     tools:context="com.example.xjapan.karaoke2.RegisterActivity"
     tools:showIn="@layout/activity_register">
 
+    <TextView
+        android:id="@+id/alertRegister"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:text="登録する曲をタップしてください" />
+
+    <ListView
+        android:id="@+id/registerMusicListView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/alertRegister" />
+
 </RelativeLayout>
