--- a/app/src/main/res/layout/content_search_want_music.xml
+++ b/app/src/main/res/layout/content_search_want_music.xml
@@ -34,11 +34,10 @@
         android:layout_alignParentRight="true"
         android:layout_below="@+id/textInputLayout"
         android:layout_centerInParent="true"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
         android:paddingLeft="@dimen/search_button_margin"
         android:paddingRight="@dimen/search_button_margin"
         android:text="検索" />
+
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout2"
@@ -64,5 +63,15 @@
         android:paddingLeft="@dimen/search_button_margin"
         android:paddingRight="@dimen/search_button_margin"
         android:text="検索" />
+
+    <!--view表示時にeditTextからフォーカスを外すため-->
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
+
+        <requestFocus />
+    </TextView>
 
 </LinearLayout>
