--- a/app/src/main/res/layout/content_search_want_music.xml
+++ b/app/src/main/res/layout/content_search_want_music.xml
@@ -34,9 +34,11 @@
         android:layout_alignParentRight="true"
         android:layout_below="@+id/textInputLayout"
         android:layout_centerInParent="true"
+        android:background="@drawable/button"
         android:paddingLeft="@dimen/search_button_margin"
         android:paddingRight="@dimen/search_button_margin"
-        android:text="検索" />
+        android:text="検索"
+        android:textColor="@color/colorWhite" />
 
 
     <android.support.design.widget.TextInputLayout
@@ -60,9 +62,11 @@
         android:layout_alignParentRight="true"
         android:layout_below="@+id/textInputLayout"
         android:layout_centerInParent="true"
+        android:background="@drawable/button"
         android:paddingLeft="@dimen/search_button_margin"
         android:paddingRight="@dimen/search_button_margin"
-        android:text="検索" />
+        android:text="検索"
+        android:textColor="@color/colorWhite" />
 
     <!--view表示時にeditTextからフォーカスを外すため-->
     <TextView
