--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorEditText">#FF4081</color>
+    <color name="colorEditTextMain">#A9A9A9</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <!--<color name="colorEditTextSub">#F78989</color>-->
+    <!--<color name="colorDarkGray">#A9A9A9</color>-->
 </resources>
