registerActivity タップ時の背景色を変える

--- a/app/src/main/res/layout/suggestion_music_list_item.xml
+++ b/app/src/main/res/layout/suggestion_music_list_item.xml
@@ -10,6 +10,7 @@
         android:id="@+id/music_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorBlack"
         android:textSize="18dp" />
 
 </LinearLayout>
