--- a/app/src/main/res/drawable/listview.xml
+++ b/app/src/main/res/drawable/listview.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
+    <item android:state_pressed="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorAccent"></solid>
+            <solid android:color="@color/colorWhite"></solid>
         </shape>
     </item>
-    <item android:state_focused="true">
+    <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorAccent"></solid>
+            <solid android:color="@color/colorSubAccent"></solid>
         </shape>
     </item>
 </selector>
