--- a/app/src/main/res/layout/content_register.xml
+++ b/app/src/main/res/layout/content_register.xml
@@ -14,7 +14,7 @@
         android:id="@+id/alertRegister"
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:text="登録する曲をタップしてください  検索中..." />
+        android:text="@string/text_please_tap_song" />
 
     <ListView
         android:id="@+id/registerMusicListView"
