--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,18 +10,18 @@
     <item
         android:id="@+id/action_sang_music"
         android:orderInCategory="100"
-        android:title="歌った曲を登録"
+        android:title="@string/menu_register_one_sang_song"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_logout"
         android:orderInCategory="100"
-        android:title="退室"
+        android:title="@string/menu_leave_room"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/action_reload"
         android:icon="@drawable/reload"
         android:orderInCategory="102"
-        android:title="reload"
+        android:title="@string/menu_reload"
         app:showAsAction="ifRoom" />
 </menu>
