--- a/app/src/main/res/layout/content_initial_use.xml
+++ b/app/src/main/res/layout/content_initial_use.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.xjapan.karaoke2.InitialUseActivity"
+    tools:context=".presentation.activity.initialization.InitialUseActivity"
     tools:showIn="@layout/activity_initial_use">
 
     <android.support.design.widget.TextInputLayout
