--- a/app/src/main/res/layout/content_suggestion.xml
+++ b/app/src/main/res/layout/content_suggestion.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.xjapan.karaoke2.SuggestionActivity"
+    tools:context=".presentation.activity.suggestion.SuggestionActivity"
     tools:showIn="@layout/activity_suggestion">
 
     <ListView
