--- a/app/src/main/res/layout/content_register.xml
+++ b/app/src/main/res/layout/content_register.xml
@@ -16,7 +16,7 @@
         android:layout_height="20dp"
         android:text="@string/text_please_tap_song" />
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/registerMusicListView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
