--- a/app/src/main/res/layout/content_search_sang_music.xml
+++ b/app/src/main/res/layout/content_search_sang_music.xml
@@ -51,7 +51,7 @@
             android:id="@+id/musicSangEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint=""
+            android:hint="@string/hint_music_name"
             android:inputType="text" />
 
     </android.support.design.widget.TextInputLayout>
