Introduced ButterKnife and CardView

--- a/app/src/main/res/layout/content_suggestion.xml
+++ b/app/src/main/res/layout/content_suggestion.xml
@@ -5,12 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".presentation.activity.suggestion.SuggestionActivity"
     tools:showIn="@layout/activity_suggestion">
 
-    <ListView
-        android:id="@+id/suggetionMusicListView"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true" />
