--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".presentation.activity.MainActivity">
+    tools:context=".presentation.activity.main.MainActivity">
     <!--<item-->
     <!--android:id="@+id/action_want_music"-->
     <!--android:orderInCategory="100"-->
