--- a/app/src/main/res/layout/activity_initial_use.xml
+++ b/app/src/main/res/layout/activity_initial_use.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.xjapan.karaoke2.InitialUseActivity">
+    tools:context=".activity.InitialUseActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
