--- a/app/src/main/res/layout/content_suggestion.xml
+++ b/app/src/main/res/layout/content_suggestion.xml
@@ -12,7 +12,6 @@
     <ListView
         android:id="@+id/suggetionMusicListView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true" />
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
