--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -3,7 +3,7 @@
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
             <solid android:color="@color/colorEditTextMain" />
-            <stroke android:width="2dp" android:color="@color/colorWhite" />
+            <stroke android:width="2dp" android:color="@android:color/white" />
             <corners android:radius="16dp" />
             <padding android:bottom="8dp" android:left="16dp" android:right="16dp" android:top="8dp" />
         </shape>
@@ -12,7 +12,7 @@
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/colorAccent" />
-            <stroke android:width="2dp" android:color="@color/colorWhite" />
+            <stroke android:width="2dp" android:color="@android:color/white" />
             <corners android:radius="16dp" />
             <padding android:bottom="8dp" android:left="16dp" android:right="16dp" android:top="8dp" />
         </shape>
