--- a/app/src/main/res/drawable/listview.xml
+++ b/app/src/main/res/drawable/listview.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorWhite"></solid>
+            <solid android:color="@android:color/white"></solid>
         </shape>
     </item>
     <item android:state_pressed="true">
