--- a/app/src/main/res/layout/content_initial_use.xml
+++ b/app/src/main/res/layout/content_initial_use.xml
@@ -34,7 +34,7 @@
         android:paddingLeft="@dimen/search_button_margin"
         android:paddingRight="@dimen/search_button_margin"
         android:text="登録"
-        android:textColor="@color/colorWhite" />
+        android:textColor="@android:color/white" />
 
     <!--view表示時にeditTextからフォーカスを外すため-->
     <TextView
