--- a/app/src/main/res/layout/content_search_sang_music.xml
+++ b/app/src/main/res/layout/content_search_sang_music.xml
@@ -34,7 +34,7 @@
         android:paddingLeft="@dimen/search_button_margin"
         android:paddingRight="@dimen/search_button_margin"
         android:text="検索"
-        android:textColor="@color/colorWhite" />
+        android:textColor="@android:color/white" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout2"
@@ -58,7 +58,7 @@
         android:paddingLeft="@dimen/search_button_margin"
         android:paddingRight="@dimen/search_button_margin"
         android:text="検索"
-        android:textColor="@color/colorWhite" />
+        android:textColor="@android:color/white" />
 
     <!--view表示時にeditTextからフォーカスを外すため-->
     <TextView
