--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.xjapan.karaoke2.activity.RegisterActivity">
+    tools:context=".activity.RegisterActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -22,6 +22,5 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_register" />
-
 
 </android.support.design.widget.CoordinatorLayout>
