strings.xmlにまとめる

--- a/app/src/main/res/layout/content_initial_use.xml
+++ b/app/src/main/res/layout/content_initial_use.xml
@@ -21,7 +21,7 @@
             android:id="@+id/userNameEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="ユーザ名"
+            android:hint="@string/hint_user_name"
             android:inputType="text" />
 
     </android.support.design.widget.TextInputLayout>
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/button"
-        android:text="登録"
+        android:text="@string/text_register"
         android:textColor="@android:color/white" />
 
     <!--view表示時にeditTextからフォーカスを外すため-->
