--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -21,7 +21,7 @@
             android:id="@+id/roomNameEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="ルーム名を入力"
+            android:hint="@string/hint_room_name"
             android:inputType="text" />
 
     </android.support.design.widget.TextInputLayout>
@@ -31,16 +31,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/button"
-        android:text="ルーム作成"
+        android:text="@string/text_create_room"
         android:textColor="@android:color/white" />
 
     <Button
         android:id="@+id/roomInButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/button"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="ルーム入室"
+        android:background="@drawable/button"
+        android:text="@string/text_enter_room"
         android:textColor="@android:color/white" />
 
     <!--view表示時にeditTextからフォーカスを外すため-->
