--- a/app/src/main/res/layout/content_search_sang_music.xml
+++ b/app/src/main/res/layout/content_search_sang_music.xml
@@ -21,7 +21,7 @@
             android:id="@+id/artistSangEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="アーティスト名"
+            android:hint="@string/hint_artist_name"
             android:inputType="text" />
 
     </android.support.design.widget.TextInputLayout>
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/button"
-        android:text="検索"
+        android:text="@string/text_search"
         android:textColor="@android:color/white" />
 
     <android.support.design.widget.TextInputLayout
@@ -43,7 +43,7 @@
             android:id="@+id/musicSangEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="曲名"
+            android:hint="@string/hint_song_name"
             android:inputType="text" />
 
     </android.support.design.widget.TextInputLayout>
@@ -53,7 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/button"
-        android:text="検索"
+        android:text="@string/text_search"
         android:textColor="@android:color/white" />
 
     <!--view表示時にeditTextからフォーカスを外すため-->
